--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+        <title>{{ page.title }} - The Wedding of Anna Sheasby and James Thomas</title>
+        
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/melody.css" >
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" >
+        
+        <meta name="description" content="The website for James Thomas and Anna Sheasby's wedding ">
+	    <meta name="author" content="James Thomas">
+        
     </head>
     <body>
