--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,13 @@
 {% include head.html %}
+{% include header.html %}
 
-    <h1>{{ page.title }}</h1>
+<main>
+    <div class="container">
+        <div class="grid 1of1">
+            <h1>{{ page.title }}</h1>
 
-    {{ content }}
-
+            {{ content }}
+        </div>
+    </div>
+</main>
 {% include foot.html %}
