--- a/css/style.css
+++ b/css/style.css
@@ -39,16 +39,19 @@ a:hover, a:visited {
     strong { font-weight: bolder; }
 
 button {
-  border: none;
-  border-radius: 1em;
-  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-  display: block;
-  font-size: 1em;
-  padding: 1em 2em;
-  width: auto;
+    border: none;
+    border-radius: 1em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    display: block;
+    font-size: 1em;
+    padding: 1em 2em;
+    width: auto;
+    color: white;
+    background: rgb(150,75,0);
 }
 
 button a {
     text-decoration: none;
     font-weight: bolder;
+    color: inherit;
 }
