--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <!--[if lt IE 9]>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
+	<![endif]-->
         <title>{{ page.title }} - The Wedding of Anna Sheasby and James Thomas</title>
         
         <link rel="stylesheet" href="{{ site.baseurl }}/css/melody.css" >
