--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a:hover, a:visited {
 
     strong { font-weight: bolder; }
 
-.rsvp-button {
+.rsvp-button, .giftlist-button {
     border: none;
     border-radius: 1em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
@@ -50,7 +50,7 @@ a:hover, a:visited {
     background: rgb(150,75,0);
 }
 
-.rsvp-button a {
+.rsvp-button a, .giftlist-button a {
     text-decoration: none;
     font-weight: bolder;
     color: white;
