--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,10 @@
 <header class="grid 1of1">
-    <h1>Anna and James' Wedding</h1>
+    <h1><a href="/">Anna and James' Wedding</a></h1>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a>
+            <li><a href="/giftlist">Gift List</a>
+            <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a>
+        </ul>
+    </nav>
 </header>
