--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ header h1 {
     text-align: center;
 }
 
+header a {
+    color: white;
+}
+
 main h1 {
     color: rgb(210,105,30);
 }
@@ -37,6 +41,22 @@ a:hover, a:visited {
 
 
     strong { font-weight: bolder; }
+
+
+header nav {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+header > nav > ul > li > a {
+    display: block;
+    font-size: 2.25em; /* 36 / 16 */
+    line-height: 1.333333333333333em; /* 48 / 36 */
+    margin-bottom: .6666666666666667em; /* 24 / 36 */
+    color: white;
+}
+
 
 .rsvp-button, .giftlist-button {
     border: none;
