Fixed CSS so main nav is horizontal.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <h1><a href="/">Anna and James' Wedding</a></h1>
     <nav>
         <ul>
-            <li><a href="/">Home</a>
-            <li><a href="/giftlist">Gift List</a>
-            <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a>
+            <li><a href="/index.htm">Home</a></li>
+            <li><a href="/giftlist">Gift List</a></li>
+            <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a></li>
         </ul>
     </nav>
 </header>
