--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header h1 {
     text-align: center;
 }
 
-header a {
+header h1 a {
     color: white;
 }
 
@@ -46,15 +46,19 @@ a:hover, a:visited {
 header nav {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
-header > nav > ul > li > a {
-    display: block;
-    font-size: 2.25em; /* 36 / 16 */
+header nav ul li {
+    display: inline;
+}
+
+header nav ul  li a {
+    font-size: 1.5em; /* 36 / 16 */
     line-height: 1.333333333333333em; /* 48 / 36 */
     margin-bottom: .6666666666666667em; /* 24 / 36 */
     color: white;
+    list-style-type: none;
 }
 
 
