--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="grid 1of1">
-    <h1><a href="/">Anna and James' Wedding</a></h1>
+    <h1>Anna and James' Wedding</h1>
     <nav>
         <ul>
             <li><a href="/index.htm">Home</a></li>
