Added container class to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="grid 1of1">
     <h1>Anna and James' Wedding</h1>
-    <nav>
+    <nav class="container">
         <ul>
             <li><a href="/index.htm">Home</a></li>
             <li><a href="/giftlist">Gift List</a></li>
