Fixed navigation link styling

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 header {
     color: white;
     background: rgb(150,75,0);
+    padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 header h1 {
@@ -49,13 +51,19 @@ header nav ul li {
     display: inline;
 }
 
-header nav ul  li a {
+header nav ul li a {
     font-size: 1.5em; /* 36 / 16 */
     line-height: 1.333333333333333em; /* 48 / 36 */
     margin-bottom: .6666666666666667em; /* 24 / 36 */
     color: white;
     list-style-type: none;
+    text-decoration: none;
 }
+
+header nav ul li a:hover, header nav ul li a:visited {
+    color: #FFFAF0;
+}
+
 
 
 .rsvp-button, .giftlist-button {
