Fixed broken nav links and double h1 on giftlist page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <h1>Anna and James' Wedding</h1>
     <nav class="container">
         <ul>
-            <li><a href="/index.htm">Home</a></li>
-            <li><a href="/giftlist">Gift List</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/giftlist.html">Gift List</a></li>
             <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a></li>
         </ul>
     </nav>
