--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,7 @@ a:hover, a:visited {
     color: rgb(150,75,0);
 }
 
-
-    strong { font-weight: bolder; }
-
+strong { font-weight: bolder; }
 
 header nav {
     margin: 0;
@@ -65,21 +63,21 @@ header nav ul li a:hover, header nav ul li a:visited {
 }
 
 
-
-.rsvp-button, .giftlist-button {
+a.cta-button {
     border: none;
     border-radius: 1em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-    display: block;
+    display: inline-block;
     font-size: 2em;
     padding: 1em 2em;
     width: auto;
     color: white;
     background: rgb(150,75,0);
-}
-
-.rsvp-button a, .giftlist-button a {
     text-decoration: none;
     font-weight: bolder;
+}
+
+a.cta-button:hover {
     color: white;
+    text-decoration: underline;
 }
