--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,23 @@ a:hover, a:visited {
 
 strong { font-weight: bolder; }
 
+/* Grow Transition (https://github.com/IanLunn/Hover) */
+
+.grow {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.grow:hover, .grow:focus, .grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 header nav {
     margin: 0;
     padding: 0;
@@ -62,6 +79,8 @@ header nav ul li a:hover, header nav ul li a:visited {
     color: #FFFAF0;
 }
 
+
+/* CTA Buttons */
 
 a.cta-button {
     border: none;
