--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <header class="grid 1of1">
+    <div class="container">
     <h1>Anna and James' Wedding</h1>
-    <nav class="container">
+    <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/giftlist.html">Gift List</a></li>
             <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a></li>
         </ul>
     </nav>
+    </div>
 </header>
