Remove wedding content, add basic info about James and Anna

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 <header class="grid 1of1">
     <div class="container">
-    <h1>Anna and James' Wedding</h1>
+    <h1>Anna and James' Empty Website</h1>
     <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/giftlist.html">Gift List</a></li>
-            <li><a href="mailto:wedding@sheasbythomas.co.uk">Contact Us</a></li>
         </ul>
     </nav>
     </div>
