--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+	<html lang="en-GB">
         <!--[if lt IE 9]>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
 	<![endif]-->
