--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-	<html lang="en-GB">
-        <!--[if lt IE 9]>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
-	<![endif]-->
-        <title>{{ page.title }} - The Wedding of Anna Sheasby and James Thomas</title>
-        
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/melody.css" >
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" >
-        
-        <meta name="description" content="The website for James Thomas and Anna Sheasby's wedding ">
-	    <meta name="author" content="James Thomas">
-        
-    </head>
-    <body>
+<html lang="en-GB">
+  <head>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
+    <![endif]-->
+    <title>{{ page.title }} - Anna and James Sheasby Thomas</title>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/melody.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
+
+    <meta
+      name="description"
+      content="Placeholder website for Anna and James Sheasby Thomas"
+    />
+    <meta name="author" content="James Sheasby Thomas" />
+  </head>
+  <body></body>
+</html>
